--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Birthstone&family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/136928d49d.js" crossorigin="anonymous"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
